--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/x-icon" href="./assets/icon/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <script src="/assets/gz3d.min.js" async></script>
+  <script src="/assets/gz3d.js" async></script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113063919-2"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
