--- a/src/index.prod.html
+++ b/src/index.prod.html
@@ -21,12 +21,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="/assets/gz3d.min.js" async></script>
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113063919-2"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JKS50SX85K"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'UA-113063919-2');
+    gtag('config', 'G-JKS50SX85K');
   </script>
 </head>
 <body class="mat-typography" style="background: #f6f7f7">
