--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,7 @@
 </head>
 <body class="mat-typography" style="background: #f6f7f7">
   <gz-app-root>
-    <div style="text-align: center; font-size: x-large; font-family: helvetica;">
-      <h2 style="font-weight: bold; font-size: 1.5em; margin: 1em 0;">Lining up the robots...</h2>
-      <img src="assets/images/gz.gif">
-    </div>
+    <div id="html-spinner"></div>
   </gz-app-root>
 </body>
 </html>
